--- a/client/main.css
+++ b/client/main.css
@@ -11,3 +11,7 @@ body {
   radial-gradient(100% 148.07% at 0% 0%, #fff500 0%, #51d500 100%);
   background-blend-mode: screen, color-dodge, overlay, difference, normal;
   }
+
+  .strike{
+    text-decoration:line-through;
+  }
