--- a/client/main.css
+++ b/client/main.css
@@ -19,3 +19,10 @@ body {
   .errorBox{
     border: 4px solid red !important;
   }
+
+  .taskDelete, 
+  .taskRestore{
+    float: right;
+  }
+
+  
